Bug 1795574 - Avoid deadlock in Wayland vsync. r=rmader

And add lock annotations too, fixing relevant issues.

Differential Revision: https://phabricator.services.mozilla.com/D159498